# openbestand

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: manual.yml
openbestand/: cli.py  core.py  gui.py
